# QriaFiction

./: .gitignore  README.md  language_spec.md  pyproject.toml
data/games/demo/: project.toml
data/games/demo/saves/: autosave.json
data/games/demo/script/: chapter_test.qf  events.qf  main.qf
dev/: SKILL.md  agent_prompt.md  language_spec.md  prompt.md  quick_start.md
src/: jsapi.py  main.py
src/app/: __init__.py  api.py  api_decorators.py  config.py  logger.py
src/core/: __init__.py  ai_engine.py  ai_matchers.py  ast.py  errors.py  interpreter.py  lexer.py  parser.py  runtime.py  stmt_handlers.py  text_utils.py  tokens.py
src/static/: app.js  index.html
tests/: test_ai_matchers.py  test_audio.py  test_interpreter.py  test_lexer.py  test_multi_script.py  test_parser.py  test_runtime.py
tests/features/: test_ai_matchers.py  test_audio.py  test_options.py
tests/integration/: test_multi_script.py
tests/unit/core/: __init__.py  test_ai_engine.py  test_errors.py  test_interpreter.py  test_lexer.py  test_parser.py  test_runtime.py
tests/unit/tools/: test_text_utils.py
tools/: example.qf
tools/vscode-qfs-syntax/: README.md  language-configuration.json  package.json  qfs-language-0.1.1.vsix
tools/vscode-qfs-syntax/syntaxes/: qfs.tmLanguage.json
