[project]
name = "QriaFiction"
version = "0.1.0"
description = "Interactive Fiction Engine"
requires-python = ">=3.12"
dependencies = [
    "pywebview>=6.2.1",
    "toml>=0.10.2",
]

[project.scripts]
qriafiction = "src.main:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
