[project]
name = "QriaFiction"
version = "0.1.1"
description = "Interactive Fiction Engine"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "openai>=2.35.1",
    "pywebview>=6.2.1",
    "toml>=0.10.2",
]

[project.scripts]
qriafiction = "src.main:main"

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
